# ceres_solver

./: CMakeLists.txt  README.md  package.xml
cmake/: ProbeCXSparse.cmake  ProbeGflags.cmake  ProbeGlog.cmake  ProbeLAPACK.cmake  ProbeOpenMP.cmake  ProbeSuiteSparse.cmake
internal/ceres/: CMakeLists.txt  file.cc
